# lidar_slam_ws

./: .gitignore  F20_after_optimization_Left_registration_distances.csv  F20_after_optimization_Right_registration_distances.csv  No_Optimization_gicp.csv  No_Optimization_icp.csv  No_optimization_registration_distances.csv  Optimization_gicp_100.csv  Optimization_once_gicp.csv  Optimization_once_gicp_100.csv  Optimization_once_gicp_100_40.csv  Optimization_once_gicp_200.csv  README.md  draw_ndt_icp.py  draw_trajctory.py  real_trajectory.csv  real_trajectory_No_IMU.csv  reality_trajectory.csv  reality_trajectory_improved.csv  reality_trajectory_noRotation.csv  statistics_Current_Last.csv  statistics_ICP.csv  statistics_NDT.csv  statistics_NDT_ICP.csv  test_trajectory.csv  test_trajectory_No_IMU.csv
data/: draw.py  draw_ndt.py  ndt_distances.csv  registration_distances.csv  source_cloud.pcd  target_cloud.pcd
data/20窗口/: No_Optimization_gicp.csv  Optimization_once_gicp_200.csv
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/catkin_tools_prebuild/: build.symlink.001.log.stderr  build.symlink.002.log.stderr  build.symlink.003.log.stderr  build.symlink.004.log.stderr
logs/lidar_slam/: build.check.022.log.stderr  build.check.202.log.stderr  (+103 more)
src/lidar_slam/: CMakeLists.txt
src/lidar_slam/include/: ImuDataHandler.cpp  ImuDataHandler.h  point_process.h
src/lidar_slam/src/: ImuDataHandler.cpp  Optimization_once_gicp.csv  main.cpp  point_process.cpp  reality_trajectory_improved.csv
(+42 files in other folders)
